--- a/funktion.html
+++ b/funktion.html
@@ -1,69 +1,87 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<meta name="robots" content="noindex, nofollow">
 
-<title>Vandflasken</title>
-<link rel="stylesheet" href="funktion.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+
+    <title>Forside</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<div class="wrapper">
-	<nav class="main-nav">
-			<ul>
-				<li><a href="index.html"> Hjem </a></li>
-				<li><a href="shop.html"> Shop </a></li>
-				<li><a href="funktion.html"> Funktion </a></li>
-			  <li><a href="klima.html"> Klima </a></li>
-			</ul>
-<img class="logoshop" src="img/logo.png" alt="logo">
-<hr>
-	</nav>
-	<article class="content">
-		<h1>Hvorfor er flasken funktionel?</h1>
-		<p> Når tasken er fyldt med computer og bøger
-			sørger INNO-VAND for der også altid er plads
-			til din vandflaske.
+    <div class="wrapper">
+        <header>
+            <a href="./"><img class="logo" src="img/inno-vand.png" alt="logo"></a>
+        </header>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./"> Hjem </a></li>
+                <li><a href="shop.html"> Shop </a></li>
+                <li><a href="funktion.html"> Funktion </a></li>
+                <li><a href="klima.html"> Klima </a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="title">Funktion</h1>
+            <section class="content">
+                <article>
+                    <h2>Hvorfor er flasken funktionel?</h2>
+                    <p> Når tasken er fyldt med computer og bøger
+                			sørger INNO-VAND for der også altid er plads
+                			til din vandflaske.
 
-			At have en vandflaske der kan folde sig sammen
-			giver dig en funktionalitet som du ikke har
-			oplevet før.
+                			At have en vandflaske der kan folde sig sammen
+                			giver dig en funktionalitet som du ikke har
+                			oplevet før.
 
-			INNO-VAND - Klima venligt og funktionelt
-			design
-		</p>
+                			INNO-VAND - Klima venligt og funktionelt
+                			design
 
-		<h2>Anmeldelser</h2>
-			<p class="tekst">
-			"Jeg bruger min INNO-VAND hver dag,
-			den har løst et hverdags problem som
-			jeg ikke engang vidste jeg havde"
+                		</p>
 
-			"følelsen af at tage den sidste tår
-			for så at kunne folde sin vandflaske
-			sammen så den fylder intet er
-			ekstremt tilfredsstillende"
+                </article>
+                <img src="img/funktion.jpg"/>
+                <article class="brugerne">
+                    <h2>Hvad synes brugerne om det?</h2>
+                    <p><q>Jeg bruger min INNO-VAND hver dag,
+              			den har løst et hverdags problem som
+              			jeg ikke engang vidste jeg havde.</q></p>
+                    <p><q>Følelsen af at tage den sidste tår
+              			for så at kunne folde sin vandflaske
+              			sammen så den fylder intet er
+              			ekstremt tilfredsstillende.</q></p>
+                    <p><q>Min INNO-VAND er altid i min jakkelomme
+              			når jeg tager til skole, på den måde har
+              			jeg altid min vandflaske på mig.</q></p>
+                </article>
+                <img src="img/bruger3.jpg" class="bruger" />
+            </section>
 
-			"Min INNO-VAND er altid i min jakkelomme
-			når jeg tager til skole, på den måde har
-			jeg altid min vandflaske på mig"
-			</p>
+            <section class="cta">
+                <article>
+                    <h2>Er du overbevist?</h2>
+                    <p>Kig i vores shop og vælg din helt egen.</p>
+                    <a href="shop.html" class="knap">Se udvalg</a>
+                </article>
+            </section>
 
-	</article>
+        </main>
 
-	<footer class="main-footer">
-<hr>
-			 <img class="foot" src="img/logo.png" alt="logo">
-			 <p class="p3">Uddannelsesvej 22,</p>
-	     <p class="p1">4600 Køge</p>
-			 <p class="p2"> Email:</p>
-	     <p class="p4">koege@zealand.dk</p>
-			 <p class="p5">Tlf.: +45 5076 2600</p>
+        <footer>
+            <img src="img/inno-vand.png" alt="logo">
+            <div class="socials">
+              <a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+              <a href="#"><img src="img/icons/twitter.svg" alt=""></a>
+              <a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+            </div>
+            <p class="addresse">Uddannelsesvej 22, 4600 Køge</p>
+            <p class="info">info@innovand.dk
+                <br />Tlf.: +45 50762600</p>
+        </footer>
 
-	</footer>
-
-	</div>
+    </div>
 </body>
+
 </html>
