--- a/klima.html
+++ b/klima.html
@@ -1,71 +1,86 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<meta name="robots" content="noindex, nofollow">
 
-<title>Vandflasken</title>
-<link rel="stylesheet" href="funktion.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+
+    <title>Forside</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<div class="wrapper">
-	<nav class="main-nav">
-			<ul>
-				<li><a href="index.html"> Hjem </a></li>
-				<li><a href="shop.html"> Shop </a></li>
-				<li><a href="funktion.html"> Funktion </a></li>
-			  <li><a href="klima.html"> Klima </a></li>
-			</ul>
-			<hr>
-<img class="logoshop" src="img/logo.png" alt="logo">
-	</nav>
-	<article class="content">
-		<h1>Hvad gør flasken for klimaet?</h1>
-		<p> INNO-VAND deltager også i miljø og klima
-debatten INNO-VAND består af 100%
- genbrugsplast.
+    <div class="wrapper">
+        <header>
+            <a href="./"><img class="logo" src="img/inno-vand.png" alt="logo"></a>
+        </header>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./"> Hjem </a></li>
+                <li><a href="shop.html"> Shop </a></li>
+                <li><a href="funktion.html"> Funktion </a></li>
+                <li><a href="klima.html"> Klima </a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="title">Klima</h1>
+            <section class="content">
+                <article>
+                    <h2>Hvad gør flasken for klimaet?</h2>
+                    <p> INNO-VAND deltager også i miljø og klima
+                debatten INNO-VAND består af 100%
+                 genbrugsplast.
 
-Som virksomhed arbejder vi hårdt på at
-hjælpe til i klima kampen.
+                Som virksomhed arbejder vi hårdt på at
+                hjælpe til i klima kampen.
 
-Støt miljøet med INNO-VAND
+                Støt miljøet med INNO-VAND
 
-INNO-VAND - Klima venligt og funktionelt
-design
+                INNO-VAND - Klima venligt og funktionelt
+                design
 
-		</p>
+                		</p>
 
-		<h2>Anmeldelser</h2>
-			<p class="tekst">
-				"At INNO-VAND er lavet af 100% genbrug
-				synes jeg er mega fedt! At den så også er
-				super funktionel gør den bare endnu federe!"
+                </article>
+                <img src="img/klima.jpg" class="" />
+                <article class="brugerne">
+                    <h2>Hvad synes brugerne om det?</h2>
+                    <p><q>At INNO-VAND er lavet af 100% genbrug
+            				synes jeg er mega fedt! At den så også er super funktionel gør den bare endnu federe!</q></p>
+                    <p><q>Jeg købte egentlig vandflasken for
+            				funktionaliteten men kan nu også meget godt
+            				lide at den bidrager til miljøet.</q></p>
+                    <p><q>Brugte den til klima march! Den var mega
+            				praktisk og nem at pakke sammen og putte i
+            				lommen.</q></p>
+                </article>
+                <img src="img/bruger2.jpg" class="bruger" />
+            </section>
 
-				"Jeg købte egentlig vandflasken for
-				funktionaliteten men kan nu også meget godt
-				lide at den bidrager til miljøet"
+            <section class="cta">
+                <article>
+                    <h2>Er du overbevist?</h2>
+                    <p>Kig i vores shop og vælg din helt egen.</p>
+                    <a href="shop.html" class="knap">Se udvalg</a>
+                </article>
+            </section>
 
-				"Brugte den til klima march! Den var mega
-				praktisk og nem at pakke sammen og putte i
-				lommen."
+        </main>
 
-			</p>
+        <footer>
+            <img src="img/inno-vand.png" alt="logo">
+            <div class="socials">
+              <a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+              <a href="#"><img src="img/icons/twitter.svg" alt=""></a>
+              <a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+            </div>
+            <p class="addresse">Uddannelsesvej 22, 4600 Køge</p>
+            <p class="info">info@innovand.dk
+                <br />Tlf.: +45 50762600</p>
+        </footer>
 
-	</article>
-
-		<footer class="main-footer">
-<hr>
-			 <img class="foot" src="img/logo.png" alt="logo">
-			 <p class="p3">Uddannelsesvej 22,</p>
-	     <p class="p1">4600 Køge</p>
-			 <p class="p2"> Email:</p>
-	     <p class="p4">koege@zealand.dk</p>
-			 <p class="p5">Tlf.: +45 5076 2600</p>
-
-	</footer>
-
-	</div>
+    </div>
 </body>
+
 </html>
