--- a/index.html
+++ b/index.html
@@ -1,58 +1,77 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<meta name="robots" content="noindex, nofollow">
 
-<title>Forside</title>
-<link rel="stylesheet" href="forsidecss.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+
+    <title>Forside</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<div class="wrapper">
-	<header class="main-head"></header>
+    <div class="wrapper">
+        <header>
+            <a href="./"><img class="logo" src="img/inno-vand.png" alt="logo"></a>
+        </header>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./"> Hjem </a></li>
+                <li><a href="shop.html"> Shop </a></li>
+                <li><a href="funktion.html"> Funktion </a></li>
+                <li><a href="klima.html"> Klima </a></li>
+            </ul>
+        </nav>
 
-	<nav class="main-nav">
-			<ul>
-				<li><a href="index.html"> Hjem </a></li>
-				<li><a href="shop.html"> Shop </a></li>
-				<li><a href="funktion.html"> Funktion </a></li>
-			  <li><a href="klima.html"> Klima </a></li>
-			</ul>
-	</nav>
-	<article class="content">
-		<img class="logo" src="img/logo.png" alt="logo">
-		<h1>A New Revolution</h1>
-		<p> Inno-vand er et dansk designet produkt af
-nogle studerende i Køge. Under produktionen af vores produkt har vi lagt stor vægt
-på at genbrugsdelen, altså miljøet.</p>
+        <main>
+            <div class="cover">
+                <h1>A New Revolution!</h1>
+                <img src="img/cover.png" alt="" class="produkt">
+            </div>
 
-<p>
-Vores koncept er at skabe et funktionelt
-og miljøvenligt produkt. Om man prioritere
-funktionalitet, klimabevidsthed eller begge
-så er vores vandflaske med til at gøre din
-hverdag lettere.
+            <section class="content">
+                <article>
+                    <h2>Mindre besvær for dig og miljøet</h2>
+                    <p>Inno-vand er en drikkeflaske, som både er funktionel og bæredygtig.</p>
+                    <p>Produktet er fremstillet af genbrugsplast og kan foldes sammen, så den ikke fylder i tasken. Det er smart.</p>
+                    <p>Om man prioritere funktionalitet, klimabevidsthed eller begge, så er vores drikkeflaske med til at gøre din hverdag lettere.</p>
+                    <div class="knapper"><a class="knap" href="funktion.html">Læs om funktion</a>
+                        <a class="knap" href="klima.html">Læs om klima</a></div>
 
-</p>
+                </article>
+                <img src="img/image1.jpg" class="" />
+                <article class="brugerne">
+                    <h2>Hvad siger brugerne om os?</h2>
+                    <p><q>Min INNO-VAND er altid i min jakkelomme når jeg tager til skole, på den måde har jeg altid min vandflaske på mig.</q></p>
+                    <p><q>Brugte den til klima march! Den var mega praktisk og nem at pakke sammen og putte i lommen.</q></p>
+                </article>
+                <img src="img/bruger.jpeg" class="bruger" />
+            </section>
 
-	<img src="img/drikke.png" width="261" height="174" alt="forsidebillede" class="billede"/>
+            <section class="cta">
+                <article>
+                    <h2>Er du overbevist?</h2>
+                    <p>Kig i vores shop og vælg din helt egen.</p>
+                    <a href="shop.html" class="knap">Se udvalg</a>
+                </article>
+            </section>
 
+        </main>
 
-	</article>
+        <footer>
+            <img src="img/inno-vand.png" alt="logo">
+            <div class="socials">
+              <a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+              <a href="#"><img src="img/icons/twitter.svg" alt=""></a>
+              <a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+            </div>
+            <p class="addresse">Uddannelsesvej 22, 4600 Køge</p>
+            <p class="info">info@innovand.dk
+                <br />Tlf.: +45 50762600</p>
+        </footer>
 
-
-	<footer class="main-footer">
-<hr>
-		 <img class="foot" src="img/logo.png" alt="logo">
-		 <p class="p3">Uddannelsesvej 22,</p>
-     <p class="p1">4600 Køge</p>
-		 <p class="p2"> Email:</p>
-     <p class="p4">koege@zealand.dk</p>
-		 <p class="p5">Tlf.: +45 5076 2600</p>
-		</footer>
-
-	</div>
+    </div>
 </body>
+
 </html>
