--- a/shop.html
+++ b/shop.html
@@ -1,52 +1,73 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<meta name="robots" content="noindex, nofollow">
 
-<title>vandflaske</title>
-<link rel="stylesheet" href="shop.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+
+    <title>Forside</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<div class="wrapper">
-	<nav class="main-nav">
-			<ul>
-				<li><a href="index.html"> Hjem </a></li>
-				<li><a href="shop.html"> Shop </a></li>
-				<li><a href="funktion.html"> Funktion </a></li>
-			  <li><a href="klima.html"> Klima </a></li>
-			</ul>
-			<img class="logoshop" src="img/logo.png" alt="logo">
-	</nav>
+    <div class="wrapper">
+        <header>
+            <a href="./"><img class="logo" src="img/inno-vand.png" alt="logo"></a>
+        </header>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./"> Hjem </a></li>
+                <li><a href="shop.html"> Shop </a></li>
+                <li><a href="funktion.html"> Funktion </a></li>
+                <li><a href="klima.html"> Klima </a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1 class="title">Shop</h1>
+            <section class="shop">
+                <article>
+                    <img src="img/fold.png" class="" />
+                    <h2>INNO-VAND</h2>
+                    <p>En genbrugelig flaske, som er lavet af
+                    materialet Thermoplastic polyurethane, som
+                    er af høj kvalitet og miljøvenligt.</p>
+                    <a href="#" class="knap">Køb nu</a>
+                </article>
 
-	<article class="content">
-		<img class="center" src="img/shop.png" alt="shop">
-<input class="center1" type="textarea" value="200,- DKK" style="width: 180px">
-<p>En genbrugelig silicon-flaske, som kan foldes
-til at blive mindre.</p>
-		<hr class="custom">
+                <article>
+                    <img src="img/lite.png" class="" />
+                    <h2>INNO-VAND Lite</h2>
+                    <p>En genbrugelig silicon-flaske, som kan foldes
+                    til at blive mindre.</p>
+                    <a href="#" class="knap">Køb nu</a>
+                </article>
 
-		<img class="center" src="img/shop.png" alt="shop">
-<input class="center1" type="textarea" value="150,- DKK" style="width: 180px">
-<p>En genbrugelig flaske, som er lavet af
-materialet Thermoplastic polyurethane, som
-er af høj kvalitet og miljøvenligt. </p>
-	</article>
+            </section>
+            <!--
+            <section class="cta">
+                <article>
+                    <h2>Er du overbevist?</h2>
+                    <p>Kig i vores shop og vælg din helt egen.</p>
+                    <a href="shop.html" class="knap">Se udvalg</a>
+                </article>
+            </section>
+            -->
+        </main>
 
-	<footer class="main-footer">
+        <footer class="border-top">
+            <img src="img/inno-vand.png" alt="logo">
+            <div class="socials">
+              <a href="#"><img src="img/icons/facebook.svg" alt=""></a>
+              <a href="#"><img src="img/icons/twitter.svg" alt=""></a>
+              <a href="#"><img src="img/icons/instagram.svg" alt=""></a>
+            </div>
+            <p class="addresse">Uddannelsesvej 22, 4600 Køge</p>
+            <p class="info">info@innovand.dk
+              <br />Tlf.: +45 50762600</p>
+        </footer>
 
-		 <img class="foot" src="img/logo.png" alt="logo">
-		 <p class="p3">Uddannelsesvej 22,</p>
-     <p class="p1">4600 Køge</p>
-		 <p class="p2"> Email:</p>
-     <p class="p4">koege@zealand.dk</p>
-		 <p class="p5">Tlf.: +45 5076 2600</p>
-
-
-	 </footer>
-
-	</div>
+    </div>
 </body>
+
 </html>
