--- a/funktion.html
+++ b/funktion.html
@@ -42,7 +42,7 @@
                 		</p>
 
                 </article>
-                <img src="img/funktion.jpg"/>
+                <img src="img/funktion.jpg" alt="Billede af notesbog i møde"/>
                 <article class="brugerne">
                     <h2>Hvad synes brugerne om det?</h2>
                     <p><q>Jeg bruger min INNO-VAND hver dag,
@@ -56,7 +56,7 @@
               			når jeg tager til skole, på den måde har
               			jeg altid min vandflaske på mig.</q></p>
                 </article>
-                <img src="img/bruger3.jpg" class="bruger" />
+                <img src="img/bruger3.jpg" class="bruger" alt="Billede af mand i gaden" />
             </section>
 
             <section class="cta">
