--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <a class="knap" href="klima.html">Læs om klima</a></div>
 
                 </article>
-                <img src="img/image1.jpg" class="" />
+                <img src="img/image1.jpg" alt="Billede af arbejdsbord"/>
                 <article class="brugerne">
                     <h2>Hvad siger brugerne om os?</h2>
                     <p><q>Min INNO-VAND er altid i min jakkelomme når jeg tager til skole, på den måde har jeg altid min vandflaske på mig.</q></p>
                     <p><q>Brugte den til klima march! Den var mega praktisk og nem at pakke sammen og putte i lommen.</q></p>
                 </article>
-                <img src="img/bruger.jpeg" class="bruger" />
+                <img src="img/bruger.jpeg" alt="Billede af kvinde" class="bruger" />
             </section>
 
             <section class="cta">
