--- a/klima.html
+++ b/klima.html
@@ -43,7 +43,7 @@
                 		</p>
 
                 </article>
-                <img src="img/klima.jpg" class="" />
+                <img src="img/klima.jpg" class="" alt="Billede af is ved Grønland" />
                 <article class="brugerne">
                     <h2>Hvad synes brugerne om det?</h2>
                     <p><q>At INNO-VAND er lavet af 100% genbrug
@@ -55,7 +55,7 @@
             				praktisk og nem at pakke sammen og putte i
             				lommen.</q></p>
                 </article>
-                <img src="img/bruger2.jpg" class="bruger" />
+                <img src="img/bruger2.jpg" class="bruger" alt="Billede af mand i naturen."/>
             </section>
 
             <section class="cta">
