--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
             <h1 class="title">Shop</h1>
             <section class="shop">
                 <article>
-                    <img src="img/fold.png" class="" />
+                    <img src="img/fold.png" alt="INNO-VAND vandflaske"/>
                     <h2>INNO-VAND</h2>
                     <p>En genbrugelig flaske, som er lavet af
                     materialet Thermoplastic polyurethane, som
@@ -36,7 +36,7 @@
                 </article>
 
                 <article>
-                    <img src="img/lite.png" class="" />
+                    <img src="img/lite.png" alt="INNO-VAND Lite vandflaske"/>
                     <h2>INNO-VAND Lite</h2>
                     <p>En genbrugelig silicon-flaske, som kan foldes
                     til at blive mindre.</p>
