test af billeder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="knap" href="klima.html">Læs om klima</a></div>
 
                 </article>
-                <img src="img/image1.jpg" alt="Billede af arbejdsbord"/>
+                <img src="img/Billede til inno-vand.jpg" alt="Billede af arbejdsbord"/>
                 <article class="brugerne">
                     <h2>Hvad siger brugerne om os?</h2>
                     <p><q>Min INNO-VAND er altid i min jakkelomme når jeg tager til skole, på den måde har jeg altid min vandflaske på mig.</q></p>
